[sc-12] search food in nutritionix setup tabs for branded and common foods, implement empty view, update scaffold color in dark theme to use true black, clear search results once user left the search food screen, implement general error view, implement powered by nutritionix wrapper

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -28,5 +28,6 @@
     }
   },
   "commonLabel": "Common",
-  "brandedLabel": "Branded"
+  "brandedLabel": "Branded",
+  "noResultsTitle": "There were no results matching your search"
 }
