[sc-40] add meals to diary create empty add food screen, add meals to diary screen

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -29,5 +29,18 @@
   },
   "commonLabel": "Common",
   "brandedLabel": "Branded",
-  "noResultsTitle": "There were no results matching your search"
+  "noResultsTitle": "There were no results matching your search",
+  "breakfastLabel": "Breakfast",
+  "lunchLabel": "Lunch",
+  "dinnerLabel": "Dinner",
+  "snacksLabel": "Snacks",
+  "noFoodLoggedMessage": "You didn't log foods for this meal yet.",
+  "caloriesShortLabel": "{calories} cal",
+  "@caloriesShortLabel": {
+    "placeholder": {
+      "calories": {
+        "type": "int"
+      }
+    }
+  }
 }
