[sc-14] food details screen move servings text field above meal dropdown, autofocus servings text field, show pie chart with calories and macros

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -44,5 +44,6 @@
     }
   },
   "mealLabel": "Meal",
-  "servingsLabel": "Servings"
+  "servingsLabel": "Serving size (grams)",
+  "caloriesShortGenericLabel": "cal"
 }
