[sc-57] fetch user diary refresh diary after logging a food, display total calories and macros in grams for today, display calories and macros for each meal from today's diary

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -60,5 +60,29 @@
   "vitaminCLabel": "Vitamin C",
   "calciumLabel": "Calcium",
   "ironLabel": "Iron",
-  "vitaminDLabel": "Vitamin D"
+  "vitaminDLabel": "Vitamin D",
+  "carbsValue": "Carbs {value}g",
+  "@carbsValue": {
+    "placeholder": {
+      "value": {
+        "type": "int"
+      }
+    }
+  },
+  "fatValue": "Fat {value}g",
+  "@fatValue": {
+    "placeholder": {
+      "value": {
+        "type": "int"
+      }
+    }
+  },
+  "proteinValue": "Protein {value}g",
+  "@proteinValue": {
+    "placeholder": {
+      "value": {
+        "type": "int"
+      }
+    }
+  }
 }
