[sc-112] login show snack bar when user does not exist, fetch user id by username, implement login by username screen, securely store user id, disable login button if username field is empty, show loading indicator, show login screen on app open

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -84,5 +84,8 @@
         "type": "int"
       }
     }
-  }
+  },
+  "loginTitle": "Login",
+  "usernameLabel": "Username",
+  "userNotFoundError": "The username you entered was not found."
 }
