[sc-112] login display logged in users list in accounts screen, implement add account functionality, show relevant login error message if the username is already logged in, show relevant login error message if the request failed due to connection

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -112,5 +112,10 @@
       }
     }
   },
-  "accountsTitle": "Accounts"
+  "accountsTitle": "Accounts",
+  "logoutLabel": "Logout",
+  "addAccountLabel": "Add account",
+  "continueLabel": "Continue",
+  "alreadyLoggedInMessage": "You are already logged in with this account.",
+  "connectionErrorMessage": "Could not connect to the server."
 }
