[sc-94] create food add create food button in search screen, navigate to create food screen

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -117,5 +117,6 @@
   "addAccountLabel": "Add account",
   "continueLabel": "Continue",
   "alreadyLoggedInMessage": "You are already logged in with this account.",
-  "connectionErrorMessage": "Could not connect to the server."
+  "connectionErrorMessage": "Could not connect to the server.",
+  "createFoodLabel": "Create food"
 }
