[sc-94] create food add text field for serving size, validate serving size input, fix text field component overflow, remove suffix icon space when icon is null, add done action in app bar to submit created food, add servings input, add calories and macros inputs, validate calories and macros inputs

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -119,8 +119,12 @@
   "alreadyLoggedInMessage": "You are already logged in with this account.",
   "connectionErrorMessage": "Could not connect to the server.",
   "createFoodLabel": "Create food",
-  "foodNameLabel": "Food name",
+  "foodLabel": "Food",
   "brandNameLabel": "Brand name (optional)",
   "emptyFoodNameError": "Food name can't be empty.",
-  "saveFoodLabel": "Save food"
+  "nutritionPerServingMessage": "Note: The nutritional information should be entered for the specified serving size.",
+  "emptyServingError": "Serving size can't be empty.",
+  "invalidServingError": "Invalid serving size.",
+  "requiredError": "Required",
+  "invalidError": "Invalid"
 }
