[sc-94] create food add text field for serving size, validate serving size input, fix text field component overflow, remove suffix icon space when icon is null, add done action in app bar to submit created food, add servings input, add calories and macros inputs, validate calories and macros inputs, add micronutrients inputs, add validation for generic micronutrient

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -122,9 +122,11 @@
   "foodLabel": "Food",
   "brandNameLabel": "Brand name (optional)",
   "emptyFoodNameError": "Food name can't be empty.",
-  "nutritionPerServingMessage": "Note: The nutritional information should be entered for the specified serving size.",
   "emptyServingError": "Serving size can't be empty.",
   "invalidServingError": "Invalid serving size.",
   "requiredError": "Required",
-  "invalidError": "Invalid"
+  "invalidError": "Invalid",
+  "monoFatShortLabel": "Mono fat",
+  "polyFatShortLabel": "Poly fat",
+  "saltLabel": "Salt"
 }
