[sc-94] create food add text field for serving size, validate serving size input, fix text field component overflow, remove suffix icon space when icon is null, add done action in app bar to submit created food, add servings input, add calories and macros inputs, validate calories and macros inputs, add micronutrients inputs, add validation for generic micronutrient

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -128,5 +128,13 @@
   "invalidError": "Invalid",
   "monoFatShortLabel": "Mono fat",
   "polyFatShortLabel": "Poly fat",
-  "saltLabel": "Salt"
+  "saltLabel": "Salt",
+  "macrosOrCaloriesError": "These macronutrients are equivalent to {calories} calories.",
+  "@macrosOrCaloriesError": {
+    "placeholder": {
+      "calories": {
+        "type": "int"
+      }
+    }
+  }
 }
