[sc-94] create food call API to create food, navigate to log created food after the API call, disable create food form while calling the API

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -8,7 +8,7 @@
   "proteinLabel": "Protein",
   "caloriesLabel": "Calories",
   "mealsLabel": "Meals",
-  "addFoodLabel": "Add food",
+  "logFoodLabel": "Log food",
   "searchFoodsLabel": "Search food",
   "searchForFoodLabel": "Search for a food",
   "generalErrorMessage": "An error occurred.",
