[sc-88] nutrients info in diary show carousel with calories and macros and low carb diet info in diary screen, update divider width between diary entries

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -238,5 +238,6 @@
     }
   },
   "collectionLabel": "Collection",
-  "gramsShortLabel": "g"
+  "gramsShortLabel": "g",
+  "netCarbsLabel": "Net carbs"
 }
