--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -239,5 +239,6 @@
   },
   "collectionLabel": "Collection",
   "gramsShortLabel": "g",
-  "netCarbsLabel": "Net carbs"
+  "netCarbsLabel": "Net carbs",
+  "errorAddFood": "Could not save food to diary. Please try again later."
 }
