[sc-58] store local data stop loading when there is an error adding the diary entry in local db, replace API call to add diary entry with food with separate calls to create food and then create diary entry, save food locally on connection exception, correct calories shown in nutritionix search results to match serving, fix casts in data sync service on invalid data errors occurrences, fetch pending foods as those that are not pushed and did not throw a validation error while pushing last time, merge remote diary with pending diary entries for display until next sync, display an error message for local diary entries that threw an error during data sync

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -240,5 +240,6 @@
   "collectionLabel": "Collection",
   "gramsShortLabel": "g",
   "netCarbsLabel": "Net carbs",
-  "errorAddFood": "Could not save food to diary. Please try again later."
+  "errorAddFood": "Could not save food to diary. Please try again later.",
+  "errorSavingEntry": "Error saving entry."
 }
