--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -241,5 +241,8 @@
   "gramsShortLabel": "g",
   "netCarbsLabel": "Net carbs",
   "errorAddFood": "Could not save food to diary. Please try again later.",
-  "errorSavingEntry": "Error saving entry."
+  "errorSavingEntry": "Error saving entry.",
+  "profileTitle": "Profile",
+  "switchAccountLabel": "Switch account",
+  "syncDataLabel": "Sync data"
 }
