[sc-105] delete diary entry implement swipe to delete in diary entries list, statically remove from diary on swipe

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -244,5 +244,6 @@
   "errorSavingEntry": "Error saving entry.",
   "profileTitle": "Profile",
   "switchAccountLabel": "Switch account",
-  "syncDataLabel": "Sync data"
+  "syncDataLabel": "Sync data",
+  "deleteEntryLabel": "Delete entry"
 }
