[sc-105] delete diary entry animate app bar title to change to delete entries on diary entry long tap

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -245,5 +245,6 @@
   "profileTitle": "Profile",
   "switchAccountLabel": "Switch account",
   "syncDataLabel": "Sync data",
-  "deleteEntryLabel": "Delete entry"
+  "deleteEntryLabel": "Delete entry",
+  "deleteEntriesTitle": "Delete entries"
 }
