[sc-105] delete diary entry show snack bar when the API for creating food fails, call API to delete a list of diary entries that were either checked for deletion or stored as pending to be deleted, fix local delete from database for diary entries, unify fetch diary entries from local database with various filters in the same method, exclude diary entries pending to be deleted from being displayed in the diary screen, sync data and then fetch diary on swipe to refresh, consider timeout exception while receiving the response a connection error, increase timeout to 9 seconds for API calls, upgrade retrofit dependencies

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -246,5 +246,6 @@
   "switchAccountLabel": "Switch account",
   "syncDataLabel": "Sync data",
   "deleteEntryLabel": "Delete entry",
-  "deleteEntriesTitle": "Delete entries"
+  "deleteEntriesTitle": "Delete entries",
+  "errorCreateFood": "Could not save food. Please use a similar food from collection or try again later."
 }
