[sc-176] recipes list screen add recipes toolbar, get rid of additional spacing from unused counter text in text field component, setup navigation for recipes tab, add text field for searching recipes and button for adding a recipe, create search text field component

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -247,5 +247,7 @@
   "syncDataLabel": "Sync data",
   "deleteEntryLabel": "Delete entry",
   "deleteEntriesTitle": "Delete entries",
-  "errorCreateFood": "Could not save food. Please use a similar food from collection or try again later."
+  "errorCreateFood": "Could not save food. Please use a similar food from collection or try again later.",
+  "recipesTitle": "Recipes",
+  "searchRecipeLabel": "Search for a recipe"
 }
