[sc-177] create recipe screen * clear search results once a food has been logged * support adding ingredients to a recipe from search and create food screens * add create recipe screen with text fields for name, serving size and ingredients list

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -249,5 +249,8 @@
   "deleteEntriesTitle": "Delete entries",
   "errorCreateFood": "Could not save food. Please use a similar food from collection or try again later.",
   "recipesTitle": "Recipes",
-  "searchRecipeLabel": "Search for a recipe"
+  "searchRecipeLabel": "Search for a recipe",
+  "createRecipeTitle": "Create recipe",
+  "recipeNameLabel": "Recipe name",
+  "ingredientsTitle": "Ingredients"
 }
