[sc-177] create recipe screen * set title to add ingredient when navigating from create recipe flow * hide meal dropdown when adding an ingredient * add nutrition section corresponding to the whole recipe * set title to search ingredient when navigating from create recipe flow * clear focus on tap outside of text field * animate to the last ingredient and un-focus any text field when an ingredient got added to the recipe

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -252,5 +252,8 @@
   "searchRecipeLabel": "Search for a recipe",
   "createRecipeTitle": "Create recipe",
   "recipeNameLabel": "Recipe name",
-  "ingredientsTitle": "Ingredients"
+  "ingredientsTitle": "Ingredients",
+  "searchIngredientTitle": "Search ingredient",
+  "addIngredientTitle": "Add ingredient",
+  "nutritionTitle": "Nutrition"
 }
