[sc-177] create recipe screen * update dividers in create recipe screen * update text field hint to recipe cooked quantity * set initial quantity to 100 grams * change add ingredient button from icon button to text button at the bottom of the list

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -255,5 +255,6 @@
   "ingredientsTitle": "Ingredients",
   "searchIngredientTitle": "Search ingredient",
   "addIngredientTitle": "Add ingredient",
-  "nutritionTitle": "Nutrition"
+  "nutritionTitle": "Nutrition",
+  "cookedQuantityGramsLabel": "Cooked quantity (grams)"
 }
