[sc-177] create recipe screen * update create recipe UI * handle create recipe errors * update nutritional information to reflect 100g of cooked product * add button to save recipe in app bar * disable text fields and add ingredient button while recipe is being created

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -256,5 +256,7 @@
   "searchIngredientTitle": "Search ingredient",
   "addIngredientTitle": "Add ingredient",
   "nutritionTitle": "Nutrition",
-  "cookedQuantityGramsLabel": "Cooked quantity (grams)"
+  "cookedQuantityGramsLabel": "Cooked quantity (grams)",
+  "summary100GramsMessage": "Summary for 100g cooked product",
+  "errorCreatingRecipeMessage": "Could not create recipe."
 }
