[sc-177] create recipe screen * add validation for empty recipe name * fix validation bug for text field component when there is no text controller explicitly set * support swipe to delete for recipe ingredients * update nutritional information for the recipe once an ingredient has been removed

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -258,5 +258,6 @@
   "nutritionTitle": "Nutrition",
   "cookedQuantityGramsLabel": "Cooked quantity (grams)",
   "summary100GramsMessage": "Summary for 100g cooked product",
-  "errorCreatingRecipeMessage": "Could not create recipe."
+  "errorCreatingRecipeMessage": "Could not create recipe.",
+  "emptyRecipeNameError": "Recipe name can't be empty"
 }
