[sc-200] Fetch all recipes from API
* Create food in Collection API if the recipe ingredient is being added from Nutritionix
* Handle food already created error
* Call create recipe API when the "done" icon is pressed

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -259,5 +259,6 @@
   "cookedQuantityGramsLabel": "Cooked quantity (grams)",
   "summary100GramsMessage": "Summary for 100g cooked product",
   "errorCreatingRecipeMessage": "Could not create recipe.",
-  "emptyRecipeNameError": "Recipe name can't be empty"
+  "emptyRecipeNameError": "Recipe name can't be empty",
+  "addIngredientError": "Could not add ingredient to recipe"
 }
