[sc-178] Recipe details screen
* Add app bar to recipe details screen
* Update disabled border and label style for text field component
* Support custom text color for text field component
* Add recipe name field to recipe details screen

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -260,5 +260,6 @@
   "summary100GramsMessage": "Summary for 100g cooked product",
   "errorCreatingRecipeMessage": "Could not create recipe.",
   "emptyRecipeNameError": "Recipe name can't be empty",
-  "addIngredientError": "Could not add ingredient to recipe"
+  "addIngredientError": "Could not add ingredient to recipe",
+  "recipeDetailsTitle": "Recipe details"
 }
