[sc-206] copy logs from yesterday
* format diary screen's selected day
* fetch diary entries for selected day

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -261,5 +261,7 @@
   "errorCreatingRecipeMessage": "Could not create recipe.",
   "emptyRecipeNameError": "Recipe name can't be empty",
   "addIngredientError": "Could not add ingredient to recipe",
-  "recipeDetailsTitle": "Recipe details"
+  "recipeDetailsTitle": "Recipe details",
+  "yesterdayLabel": "Yesterday",
+  "tomorrowLabel": "Tomorrow"
 }
