[sc-206] copy logs from yesterday
* handle logging to diary for different dates from today
* show copy from yesterday or another day modal on meal long press
* copy diary logs from yesterday locally for a specific meal
* display a loading indicator near meal that is copying entries
* only insert food if it's already saved locally

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -263,5 +263,9 @@
   "addIngredientError": "Could not add ingredient to recipe",
   "recipeDetailsTitle": "Recipe details",
   "yesterdayLabel": "Yesterday",
-  "tomorrowLabel": "Tomorrow"
+  "tomorrowLabel": "Tomorrow",
+  "copyFromTitle": "Copy from",
+  "anotherDayLabel": "Another day",
+  "previousDayLabel": "Previous day",
+  "copyYesterdayError": "Could not copy diary logs from yesterday"
 }
