[sc-206] copy logs
* implement copy to date
* replace copy dialog with modal bottom sheet
* show date picker for selecting another from or to date

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -264,8 +264,10 @@
   "recipeDetailsTitle": "Recipe details",
   "yesterdayLabel": "Yesterday",
   "tomorrowLabel": "Tomorrow",
-  "copyFromTitle": "Copy from",
-  "anotherDayLabel": "Another day",
-  "previousDayLabel": "Previous day",
-  "copyYesterdayError": "Could not copy diary logs from yesterday"
+  "copyDiaryTitle": "Copy diary entries",
+  "fromAnotherDayLabel": "From another day",
+  "fromPreviousDayLabel": "From previous day",
+  "copyDiaryError": "Could not copy diary logs",
+  "toAnotherDayLabel": "To another day",
+  "toTodayLabel": "To today"
 }
