[sc-33] Log food using FAB
* Log food from food item in search results.
* Display snack bar message for success and error states.
* Display loading indicator while food is being logged to diary.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -269,5 +269,6 @@
   "fromPreviousDayLabel": "From previous day",
   "copyDiaryError": "Could not copy diary logs",
   "toAnotherDayLabel": "To another day",
-  "toTodayLabel": "To today"
+  "toTodayLabel": "To today",
+  "foodLoggedMessage": "Food logged!"
 }
