[sc-212] Update diary log
* Fix a bug where serving size did not support decimals.
* Remove and re-insert the updated diary entry until the update entry API is ready.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -270,5 +270,6 @@
   "copyDiaryError": "Could not copy diary logs",
   "toAnotherDayLabel": "To another day",
   "toTodayLabel": "To today",
-  "foodLoggedMessage": "Food logged!"
+  "foodLoggedMessage": "Food logged!",
+  "updateLogError": "Could not update diary entry. Please try again later."
 }
