[sc-213] Set macros goals
* Add item to profile screen for user goals.
* Navigate to a new screen on user goals item tap.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -271,5 +271,6 @@
   "toAnotherDayLabel": "To another day",
   "toTodayLabel": "To today",
   "foodLoggedMessage": "Food logged!",
-  "updateLogError": "Could not update diary entry. Please try again later."
+  "updateLogError": "Could not update diary entry. Please try again later.",
+  "myGoalsLabel": "My goals"
 }
