[sc-213] Set macros goals
* Implement UI for user goals screen.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -272,5 +272,7 @@
   "toTodayLabel": "To today",
   "foodLoggedMessage": "Food logged!",
   "updateLogError": "Could not update diary entry. Please try again later.",
-  "myGoalsLabel": "My goals"
+  "myGoalsLabel": "My goals",
+  "gramsLabel": "Grams",
+  "percentagesLabel": "Percentages"
 }
