[sc-213] Set macros goals
* Display total percentage and warn user if sum of macros percentages is not valid.
* Automatically adjust calories on macro grams changed.
* Automatically adjust macros grams on calories changed.
* Fix navigation issue while logging in to a new account and opening diary screen.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -274,5 +274,7 @@
   "updateLogError": "Could not update diary entry. Please try again later.",
   "myGoalsLabel": "My goals",
   "gramsLabel": "Grams",
-  "percentagesLabel": "Percentages"
+  "percentagesLabel": "Percentages",
+  "totalLabel": "Total",
+  "macroPercentagesSumMessage": "Must be equal to 100%"
 }
